# mineginx

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: dockerhub-publish.yml  github-publish.yml  test.yaml
config/: mineginx.yaml  schema.yaml
minecraft/: Cargo.toml
minecraft-macros/: Cargo.toml
minecraft-macros/src/: lib.rs
minecraft/src/: buffer.rs  lib.rs  packets.rs  serialization.rs
minecraft/src/tests/: field_types.rs  mod.rs  serialization.rs  truncate_to_zero.rs
mineginx/: Cargo.toml  build.rs
mineginx/src/: config.rs  main.rs  stream.rs
src/: config.rs  lib.rs  main.rs
src/minecraft/: mod.rs  serialization.rs
