[package]
name = "mineginx"
version = "0.1.1"
readme = "README.md"
description = "Lightweight minecraft proxy server"
authors = ["Folleach"]
keywords = ["minecraft", "proxy"]
edition = "2021"
build = "build.rs"

[dependencies]
minecraft = { path = "../minecraft" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
log = { version = "0.4" }
simple_logger = { version = "5.1.0" }
